# Chatey

./: Cargo.toml  README.md  rec_tmux.sh  tmux.sh
client/: Cargo.toml
client/src/: handlers.rs  main.rs  tui.rs
server/: Cargo.toml
server/src/: helpers.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
