[workspace]
members = ["client", "server", "shared"]
resolver = "2"

[workspace.dependencies]
tokio = {version = "1.43.0", features = ["full"]}
log = "0.4.26"
simple_logger = "5.0.0"
tokio-tungstenite = "0.26.2"
time = "0.3.37"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_millis = "0.1.1"
