[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = {workspace = true}
log = {workspace = true}
simple_logger = {workspace = true}
tokio-tungstenite = {workspace = true}
time = {workspace = true}
futures-util = {workspace = true}
tokio-util = { version = "0.7.13", features = ["codec"] }
