[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = {workspace = true}
log = {workspace = true}
simple_logger = {workspace = true}
tokio-tungstenite = {workspace = true}
time = {workspace = true}
futures-util = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
